---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: function_simple.cm
============================================================
Source code:
fn test() -> felt {
    return 42;
}

============================================================
Generated CASM:
test:
   0: 5 42 _ -3            // Return value 0: [fp -3] = 42
   1: 11 _ _ _             // return
